--- a/settings.json
+++ b/settings.json
@@ -14,7 +14,8 @@
 		"pos": [1.5, 5],
 		"angle": 0,
 		"speed": 0.004,
-		"rotation_speed": 0.002
+		"rotation_speed": 0.002,
+		"player_size_scale": 50
 	},
 	"controls": {
 		"forward": "z",
