--- a/settings.json
+++ b/settings.json
@@ -14,8 +14,8 @@
 	"player": {
 		"pos": [1.5, 5],
 		"angle": 0,
-		"speed": 0.004,
-		"rotation_speed": 0.002,
+		"speed": 0.003,
+		"rotation_speed": 0.0018,
 		"player_size_scale": 50
 	},
 	"controls": {
@@ -23,6 +23,7 @@
 		"left": "q",
 		"backward": "s",
 		"right": "d",
+		"perspective_change": "space",
 		"sensitivity": 0.00015,
 		"mouse_max_rel": 40,
 		"mouse_border_left": 100,
