--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,8 @@
 		"max_depth": 20,
 		"texture_size": 256,
 		"tile_size": 100,
-		"floor_color": [40, 20, 0]
+		"floor_color": [40, 20, 0],
+		"sprite_size_2D": 64
 	},
 	"player": {
 		"pos": [1.5, 5],
