Improved darkening, added a setting to enabled/disable it

--- a/settings.json
+++ b/settings.json
@@ -11,7 +11,8 @@
 		"texture_size": 256,
 		"tile_size": 100,
 		"floor_color": [40, 20, 0],
-		"sprite_size_2D": 64
+		"sprite_size_2D": 64,
+		"advanced_depth_darkening": false
 	},
 	"player": {
 		"pos": [1.5, 5],
